updates the repo

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ main {
     flex-wrap: wrap-reverse;
     justify-content: space-between;
     height: auto;
+    position: fixed;
     padding: 20px;
     height: auto;
     background-color: #fff;
